implement virtual threads for commands
command threads are short lived tasks and do not require hw/kernel threads, virtual threads are also more scale-able for this.

also had to update the dev tests command to reflect this change.

Since there is also no longer a pool (pooling virtual threads is bad), there is a lot more overhead and zenvibe should use less resources.